<resources>
    <string name="app_name">PhoneDialer</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="hashtag">#</string>
    <string name="star">*</string>
    <string name="dial">dial</string>
    <string name="hint">Enter the number</string>
    <string name="delete">delete</string>
    <string name="label">Label</string>
    <string name="number">Number</string>
    <string name="save">Save</string>
    <string name="speed1">Speed1</string>
    <string name="speed2">Speed2</string>
    <string name="speed3">Speed3</string>
</resources>