<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:clickable="false">


    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="348dp"
        android:layout_height="668dp"
        android:clickable="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="textPersonName" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonErase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2B2B2B"
                android:clickable="true"
                android:contentDescription="@string/delete"
                android:onClick="onErase"
                app:backgroundTint="#555353"
                app:fabSize="auto"
                app:srcCompat="@android:drawable/ic_input_delete" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="horizontal">


            <Button
                android:id="@+id/buttonOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="oneClick"
                android:text="@string/one"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="twoClick"
                android:text="@string/two"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="threeClick"
                android:text="@string/three"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="fourClick"
                android:text="@string/four"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="fiveClick"
                android:text="@string/five"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="sixClick"
                android:text="@string/six"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthRow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="sevenClick"
                android:text="@string/seven"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="eightClick"
                android:text="@string/eight"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="nineClick"
                android:text="@string/nine"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthRow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="starClick"
                android:text="@string/star"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="zeroClick"
                android:text="@string/zero"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonHash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="hashClick"
                android:text="@string/hashtag"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/speed1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed1" />

            <Button
                android:id="@+id/speed2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed2" />

            <Button
                android:id="@+id/speed3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonDial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/dial"
                android:onClick="onDial"
                app:fabCustomSize="60dp"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>